feat: FAILED ATTEMPT TO - Implement comprehensive OTLP HTTP/2 testing and verification scripts
- Added `test-otlp-http2-enhanced.ps1` for detailed testing of OTLP HTTP/2 connections, including environment variable checks and port availability.
- Created `test-otlp-http2.ps1` to validate HTTP and gRPC OTLP endpoints with connection tests and logging.
- Introduced `test-otlp-ports.ps1` for checking multiple OTLP-related ports.
- Developed `update-imports.ps1` to update imports in TypeScript files for NextJS compatibility.
- Added `update-otlp-implementation.ps1` to switch between different OpenTelemetry implementations and update configurations accordingly.
- Created `update-to-nextjs-compatible.cmd` and `update-to-nextjs-compatible.ps1` scripts to modify project files for NextJS compatibility.
- Implemented `verify-enhanced-otlp.ps1` for enhanced verification of OpenTelemetry gRPC connections and error checking.
- Added `verify-grpc-only.ps1` to ensure only gRPC is used for telemetry, with checks for service availability and API endpoint functionality.

--- a/NodeFortuneApi/tsconfig.json
+++ b/NodeFortuneApi/tsconfig.json
@@ -8,7 +8,10 @@
     "skipLibCheck": true,
     "outDir": "./dist",
     "rootDir": "./src"
-  },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules"]
+  },  "include": ["src/**/*"],  "exclude": [
+    "node_modules",
+    "src/tracing.ts",
+    "src/tracing-simple.ts",
+    "src/tracing-minimal.ts"
+  ]
 }
