--- a/ai-app-starter-aspire.AppHost/Properties/launchSettings.json
+++ b/ai-app-starter-aspire.AppHost/Properties/launchSettings.json
@@ -1,18 +1,6 @@
 {
   "$schema": "https://json.schemastore.org/launchsettings.json",
-  "profiles": {
-    "https": {
-      "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "applicationUrl": "https://localhost:17193;http://localhost:15089",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development",
-        "DOTNET_ENVIRONMENT": "Development",
-        "DOTNET_DASHBOARD_OTLP_ENDPOINT_URL": "https://localhost:21034",
-        "DOTNET_RESOURCE_SERVICE_ENDPOINT_URL": "https://localhost:22205"
-      }
-    },
+  "profiles": {    
     "http": {
       "commandName": "Project",
       "dotnetRunMessages": true,
@@ -21,8 +9,15 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "DOTNET_ENVIRONMENT": "Development",
-        "DOTNET_DASHBOARD_OTLP_ENDPOINT_URL": "http://localhost:19290",
-        "DOTNET_RESOURCE_SERVICE_ENDPOINT_URL": "http://localhost:20203"
+        "DOTNET_DASHBOARD_OTLP_ENDPOINT_URL": "http://localhost:4317",
+        "ASPIRE_DASHBOARD_OTLP_HTTP_ENDPOINT_URL": "http://localhost:18890",
+        "DOTNET_RESOURCE_SERVICE_ENDPOINT_URL": "http://localhost:20203",
+        "ASPIRE_ALLOW_UNSECURED_TRANSPORT": "true",
+        "NODE_TLS_REJECT_UNAUTHORIZED": "0",
+        "DOTNET_SYSTEM_NET_HTTP_SOCKETSHTTPHANDLER_HTTP2UNENCRYPTEDSUPPORT": "true",
+        "OTEL_EXPORTER_OTLP_PROTOCOL": "grpc",
+        "OTEL_EXPORTER_OTLP_INSECURE": "true",
+        "DOTNET_ASPIRE_DASHBOARD_OTLP_GRPC_ENABLED": "true"
       }
     }
   }
