--- a/ai-app-starter-aspire.AppHost/appsettings.Development.json
+++ b/ai-app-starter-aspire.AppHost/appsettings.Development.json
@@ -4,5 +4,35 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowUnsecuredTransport": true,
+  "Dashboard": {
+    "AllowAnonymous": true,
+    "UseHttpsRedirection": false,
+    "EnableResourceUrlTLS": false,
+    "Otlp": {
+      "Enabled": true,
+      "EnableRuntimeInstrumentation": true,
+      "AuthMode": "None",
+      "Protocols": [ "HttpProtobuf", "Grpc" ],      "Http": {
+        "Enabled": true,
+        "Port": 18890,
+        "Scheme": "http",
+        "BaseAddress": "http://localhost:18890",
+        "Protocols": "Http1"
+      },
+      "Grpc": {
+        "Enabled": true,
+        "Port": 4317,
+        "Scheme": "http",
+        "BaseAddress": "http://localhost:4317",
+        "Protocols": "Http1"
+      }
+    },
+    "EndpointSettings": {
+      "OtlpEndpoint": {
+        "Url": "http://localhost:18890"
+      }
+    }
   }
 }
