--- a/ai-app-starter-aspire.AppHost/appsettings.json
+++ b/ai-app-starter-aspire.AppHost/appsettings.json
@@ -5,5 +5,41 @@
       "Microsoft.AspNetCore": "Warning",
       "Aspire.Hosting.Dcp": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "AllowUnsecuredTransport": true,  "Dashboard": {
+    "AllowAnonymous": true,
+    "UseHttpsRedirection": false,
+    "EnableResourceUrlTLS": false,
+    "Otlp": {
+      "AuthMode": "None",
+      "EnableRuntimeInstrumentation": true,
+      "Enabled": true,
+      "Protocols": [ "HttpProtobuf", "Grpc" ],
+      "Cors": {
+        "AllowedOrigins": [ "*" ],
+        "AllowedHeaders": [ "*" ],
+        "AllowedMethods": [ "POST", "GET", "OPTIONS" ]
+      },
+      "Http": {
+        "Enabled": true,
+        "Port": 18890,
+        "Scheme": "http",
+        "BaseAddress": "http://localhost:18890",
+        "Protocols": "Http2"
+      },
+      "Grpc": {
+        "Enabled": true,
+        "Port": 4317,
+        "Scheme": "http",
+        "BaseAddress": "http://localhost:4317",
+        "Protocols": "Http2"
+      }
+    },
+    "EndpointSettings": {
+      "OtlpEndpoint": {
+        "Url": "http://localhost:18890"
+      }
+    }
   }
 }
