--- a/NodeFortuneApi/package.json
+++ b/NodeFortuneApi/package.json
@@ -2,8 +2,7 @@
   "name": "node-fortune-api",
   "version": "1.0.0",
   "description": "Fortune API service using Express and SQLite",
-  "main": "dist/index.js",
-  "scripts": {
+  "main": "dist/index.js",  "scripts": {
     "start": "cross-env NODE_ENV=production npm run build && npm run migrate && npm run seed && node dist/index.js",
     "dev": "cross-env NODE_ENV=development npm run migrate && npm run seed && ts-node-dev --respawn src/index.ts",
     "build": "tsc",
@@ -13,6 +12,11 @@
     "predev": "npm run setup-db"
   },
   "dependencies": {
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.58.1",
+    "@opentelemetry/exporter-metrics-otlp-proto": "^0.200.0",
+    "@opentelemetry/exporter-trace-otlp-proto": "^0.200.0",
+    "@opentelemetry/sdk-node": "^0.200.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "knex": "^3.0.1",
