--- a/NodeFortuneSpa/package.json
+++ b/NodeFortuneSpa/package.json
@@ -10,6 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.58.1",
+    "@opentelemetry/exporter-metrics-otlp-proto": "^0.200.0",
+    "@opentelemetry/exporter-trace-otlp-proto": "^0.200.0",
+    "@opentelemetry/sdk-node": "^0.200.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
