Implement OpenTelemetry integration for NodeFortuneApi with Aspire, including dynamic OTLP endpoint configuration, fallback mechanisms, and enhanced troubleshooting tools.

--- a/ai-app-starter-aspire.AppHost/appsettings.Development.json
+++ b/ai-app-starter-aspire.AppHost/appsettings.Development.json
@@ -4,5 +4,22 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Aspire": {
+    "Dashboard": {
+      "NodeApps": {
+        "Enabled": true,
+        "TelemetryCollectionEnabled": true,
+        "DebugTelemetry": true
+      },
+      "Otlp": {
+        "Endpoints": [
+          {
+            "Url": "http://localhost:21035",
+            "Protocols": "Http1"
+          }
+        ]
+      }
+    }
   }
 }
