--- a/ai-app-starter-aspire.AppHost/appsettings.json
+++ b/ai-app-starter-aspire.AppHost/appsettings.json
@@ -5,5 +5,21 @@
       "Microsoft.AspNetCore": "Warning",
       "Aspire.Hosting.Dcp": "Warning"
     }
+  },
+  "Aspire": {
+    "Dashboard": {
+      "NodeApps": {
+        "Enabled": true,
+        "TelemetryCollectionEnabled": true
+      },
+      "Otlp": {
+        "Endpoints": [
+          {
+            "Url": "http://localhost:21035",
+            "Protocols": "Http1"
+          }
+        ]
+      }
+    }
   }
 }
