--- a/NodeFortuneApi/package.json
+++ b/NodeFortuneApi/package.json
@@ -2,17 +2,29 @@
   "name": "node-fortune-api",
   "version": "1.0.0",
   "description": "Fortune API service using Express and SQLite",
-  "main": "dist/index.js",
-  "scripts": {
-    "start": "cross-env NODE_ENV=production npm run build && npm run migrate && npm run seed && node dist/index.js",
-    "dev": "cross-env NODE_ENV=development npm run migrate && npm run seed && ts-node-dev --respawn src/index.ts",
+  "main": "dist/index.js",  "scripts": {
+    "start": "cross-env NODE_ENV=production npm run build && npm run migrate && npm run seed && node --require @opentelemetry/auto-instrumentations-node/register dist/index.js",
+    "dev": "cross-env NODE_ENV=development npm run migrate && npm run seed && ts-node-dev --respawn --require @opentelemetry/auto-instrumentations-node/register src/index.ts",
     "build": "tsc",
     "migrate": "knex migrate:latest",
     "seed": "knex seed:run",
     "setup-db": "ts-node src/setup-db.ts",
-    "predev": "npm run setup-db"
+    "predev": "npm run setup-db",
+    "check-otlp": "ts-node src/check-otlp.ts",
+    "dev-aspire": "cross-env OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4318 OTEL_DEBUG=true npm run dev"
   },
   "dependencies": {
+    "@opentelemetry/auto-instrumentations-node": "^0.58.1",
+    "@opentelemetry/exporter-logs-otlp-proto": "^0.200.0",
+    "@opentelemetry/exporter-metrics-otlp-http": "^0.200.0",
+    "@opentelemetry/exporter-metrics-otlp-proto": "^0.200.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.200.0",
+    "@opentelemetry/exporter-trace-otlp-proto": "^0.200.0",
+    "@opentelemetry/instrumentation-http": "^0.200.0",
+    "@opentelemetry/resources": "^2.0.0",
+    "@opentelemetry/sdk-logs": "^0.200.0",
+    "@opentelemetry/sdk-node": "^0.200.0",
+    "@opentelemetry/semantic-conventions": "^1.33.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "knex": "^3.0.1",
@@ -25,6 +37,6 @@
     "cross-env": "^7.0.3",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.8.3"
   }
 }
